apply trasaction_manager for create customized-package/tasks business logic
